--- a/src/components/check_password/check_password.css
+++ b/src/components/check_password/check_password.css
@@ -9,8 +9,8 @@
     gap: 10px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between;
 }
 
 .password-input-wrapper {
@@ -28,18 +28,16 @@
     padding: 10px 40px 10px 10px;
 }
 
-input:focus {
-    outline: none
-}
+input:focus { outline: none }
 
 .password-toggle-btn {
-    position: absolute;
     top: 25px;
     right: 10px;
-    transform: translateY(-50%);
-    background: transparent;
     border: none;
     cursor: pointer;
+    position: absolute;
+    background: transparent;
+    transform: translateY(-50%);
 }
 
 .show-info-btn {
@@ -61,10 +59,11 @@ input:focus {
 
 .close-btn {
     color: white;
-    border: none;
     cursor: pointer;
     font-size: 20px;
     padding: 5px 10px;
+    border: 1px solid;
+    border-radius: 3px;
     background-color: red;
 }
 
@@ -97,7 +96,7 @@ input:focus {
 }
 
 .medium-message {
-    color: orange;
+    color: #D46B2B;
     font-size: 16px;
 }
 
@@ -106,23 +105,15 @@ input:focus {
         max-width: 100%;
     }
 
-    .password-toggle-btn {
-        top: 20px;
-    }
+    .password-toggle-btn { top: 20px }
 
-    .password-strength-message {
-        font-size: 14px;
-    }
+    .password-strength-message { font-size: 14px }
 
-    .password-input {
-        padding: 10px;
-    }
+    .password-input { padding: 10px }
 }
 
 @media (max-width: 480px) {
-    .password-strength-container {
-        padding: 15px;
-    }
+    .password-strength-container { padding: 15px }
 
     .password-input-wrapper {
         align-items: stretch;
@@ -142,9 +133,8 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-size: 60% 60%;
     animation: gradientAnimation 15s ease infinite;
-    background: linear-gradient(45deg, #a8c0ff, #d3cce3, #e9eff1);
+    background: linear-gradient(45deg, #d3cce3, #e9eff1, #a8c0ff);
 }
 
 @keyframes gradientAnimation {
